Fixes
- Fixed horizontal scrolling on chromium.
- Fixed layout issue

--- a/css/hero_section.css
+++ b/css/hero_section.css
@@ -37,6 +37,7 @@
     white-space: nowrap;
     /* Overwrite default section title style */
     width: unset;
+    margin: unset;
 }
 
 #hero .container .subtitle {
