--- a/global.css
+++ b/global.css
@@ -25,6 +25,7 @@ body {
     min-height: 100svh;
     background-color: var(--background-primary);
     color: var(--text-primary);
+    overflow-x: hidden;
 
     font-size: 1.5rem;
     font-family: "Rubik", arial, ui-serif;
